K8s/Manifests/cilium-gw/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gw
  namespace: cilium
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      hostname: "*.z3cyber.pro"
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      hostname: "*.z3cyber.pro"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: production-cert-tls
            namespace: cilium
    - name: tls
      protocol: TLS
      hostname: "proxmox.local"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
