K8s/Manifests/cilium-gw/http-redirects.yaml
# HTTP Redirection Route (example.link)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: cilium
spec:
  parentRefs:
  - name: cilium-gw
    namespace: cilium
    sectionName: http
  hostnames:
  - "*.z3cyber.pro"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
        port: 443
