K8s/Manifests/cilium-gw/smoketest-route.yaml
# ArgoCD UI
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: smoketest-route
  namespace: test
spec:
  parentRefs:
  - name: cilium-gw
    namespace: cilium
  hostnames:
  - "smoketest2.z3cyber.pro"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: whoami
      port: 80
